--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
             </div>
         </article>
     </section>
-    <script src="comfy.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
