--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comfy</title>
-    <link rel="stylesheet" href="comfy.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
